Add blog and split up layout from content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,6 @@
 <head>
 
 <!-- Title, description and keywords -->
-<title>Archer Website Template by Marcfolio</title>
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-<meta name="description" content="Archer HTML/ CSS website template." />
-<meta name="keywords" content="Themeforest, wordpress, template" />
 <link rel="stylesheet" type="text/css" id="skin" href="./public/styles/style.css" media="screen" />
 
 <!-- Javascripts -->
@@ -41,33 +37,10 @@
 				fedick20@gmail.com
             </div>
             <div id="navigation">
-            	<a href="index.html">Home</a>&nbsp;/&nbsp;<a href="blog.html">Blog</a>
+            	<a href="index.html">Home</a>&nbsp;/&nbsp;<a href="/blog.html">Blog</a>
             </div>
         </div><!-- end of #header -->
-        <div id= "flash_banner">
-          <img src="./public/images/kitten.jpeg" alt="kitten"/>
-        </div>
-        <div id="content">
-        	<div id="left_third">
-            	<h3>Blah Blah Blah</h3>
-            	<p>Technological development is always offering new opportunities for innovative design. But innovative design always develops in tandem with innovative technology, and can never be an end in itself.</p>
-            	<strong><a href="index.html">READ MORE</a></strong>
-            </div><!-- end of #left_third -->
-            
-            <div id="middle_third">
-            	<h3>Designing for the Rich</h3>
-            	<p>Our lovely daughter says some pretty clever things, and last night was no different. As we drove home from getting H1N1 shots.</p>
-            <strong><a href="index.html">READ MORE</a></strong>
-            </div><!-- end of #middle_third -->
-            
-            <div id="right_third">
-            	<h3>Snow day on the Train</h3>
-            	<p>We road the train in to work today. A rather relaxing way to travel the long coridor to Salt Lake City verses bumper to bumper 2 hours on the freeway in the snow.</p>
-            <strong><a href="index.html">READ MORE</a></strong>
-            </div><!-- end of #right_third -->
-            
-        </div><!-- end of #content -->
-        
+{{ content }}        
         <div id="footer">
         	<p> Copyright © 1979–2010 Marcfolio. All rights reserved. </p>
         </div><!-- end of #footer -->
