Add blog post with images.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
         </div><!-- end of #header -->
 {{ content }}        
         <div id="footer">
-        	<p> Copyright © 1979–2010 Marcfolio. All rights reserved. </p>
+        	<p> Copyright &copy; 2011 BakedByLauren. All rights reserved. </p>
         </div><!-- end of #footer -->
         
     </div><!-- end of #wrapper -->
