--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
           		<a href="index.html"><img src="./public/styles/images/logo.jpg" alt="logo image"/></a>
             </div>
             <div id="header_contact">
-				Phone:<br />
-				fedick20@gmail.com
+			  <br />
+				lauren@bakedbylauren.com
             </div>
             <div id="navigation">
             	<a href="index.html">Home</a>&nbsp;/&nbsp;<a href="/blog.html">Blog</a>
